# omnivar-navigator

./: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  codecov.yml  environment.yml  pyproject.toml
adapters/: __init__.py  autopvs1.py  clinvar.py  gnomad.py  insilico.py  litmine_pm3.py  mave.py  phenotype.py  prioritizer.py  splice.py
api/: __init__.py  main.py
core/: __init__.py  adapter.py  audit.py  dx_schemas.py  schemas.py
data/: manifest.json
deploy/: .env.example  Caddyfile  __init__.py  compose.vm.yml  remote.py
diseases/: __init__.py  ontology.py
docker/: Dockerfile.api  Dockerfile.tools  Dockerfile.worker
docs/: COMPUTE_TOPOLOGY.md  DATA.md  DISCERN_Concept_Brief_v2.md  DISCERN_Coverage_Architecture_v1.md  DISCERN_Execution_Plan_v2.md  DISCERN_Execution_Plan_v3.1.md  DISCERN_Execution_Summary.md  DISCERN_Execution_Summary_v3.1.md  DISCERN_OSF_PreRegistration_v1.md  DISCERN_Reproducibility_Checklist.md  DISCERN_Source_Verification_Report.md  DISCERN_VCEP_Spec_Verification_Report.md  DISCERN_Validation_Data_and_Benchmarking_Plan.md  DISCERN_Validation_Results.md  DISCERN_Validation_Verification_Report.md  DISCERN_v3.1_Claims_Map.md  DISCERN_v3.1_Source_Verification_Report.md  OmniVar_Navigator_Concept_and_Execution_Plan_v1.md  OmniVar_Navigator_Detailed_Execution_Plan.md  OmniVar_Navigator_Phase2_Decision_Engine_Design.md  OmniVar_Navigator_Source_Verification_Report.md  Omnivar_Navigator_Execution_Summary.md  SECURITY.md  SOURCE_VERIFICATION.md
engine/: __init__.py  action_map.py  case_policy.py  gap.py  odyssey_actions.py  voi.py  (+1 more)
(+127 files in other folders)
